--- a/index.html
+++ b/index.html
@@ -292,6 +292,21 @@
                               </a></li>
                         </ul>
                 </div>
+                <div class="subscribe-container">
+                    <p>Подпишитесь на рассылку</p>
+                    <form action="#">
+                        <input type="email" name="user-email" placeholder="E-Mail">
+                        <button data-modal-open>Подписаться<svg width="24" height="24">
+                                <use href="./img/svg/sprite.svg#icon-send"></use></svg>
+                        </button>
+                    </form>
+                </div>
+                                        <!--modal with backdrop-->
+                  <div class="backdrop-2 is-hidden" data-modal>
+                      <div class="modal-subscribe">
+                       <button data-modal-close></button>
+                       </div>
+                  </div>
             </div>
         </div>
     </footer>
