--- a/portfolio.html
+++ b/portfolio.html
@@ -167,6 +167,15 @@
                               </a></li>
                         </ul>
                 </div>
+                <div class="subscribe-container">
+                    <p>Подпишитесь на рассылку</p>
+                    <form action="#">
+                        <input type="email" name="user-email" placeholder="E-Mail">
+                        <button data-modal-open>Подписаться<svg width="24" height="24">
+                                <use href="./img/svg/sprite.svg#icon-send"></use></svg>
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
